[project]
name = "desk-reservation"
version = "0.1.0"
description = "Desk reservation web app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "openpyxl>=3.1.5",
  "filelock>=3.16.0",
  "pydantic>=2.8.0",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
